# polytope

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGES.md  CONTRIBUTING.md  ChangeLog  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  run_tests.py  setup.py
.github/workflows/: main.yml
doc/: README.md  build.sh  refs.bib  tutorial.md
examples/: randplot.py  timing_benchmarks.py
polytope/: __init__.py  esp.py  plot.py  polytope.py  prop2partition.py  quickhull.py  shapes.py  solvers.py  version.py
requirements/: README.md  default.txt  extras.txt  test.txt
tests/: plot_test.py  polytope_test.py  projection_test.py  pytest.ini
